--- a/views/Shirt.ejs
+++ b/views/Shirt.ejs
@@ -10,6 +10,12 @@
 
 <body>
     <% include tabs.ejs %>
+        <div class="product-stock">
+            <button>
+            <img src="/images/5a52470a90dc293fd47be5bc8c8f58d1.jpeg">
+            <p>xxxx</p>
+        </button>
+        </div>
 </body>
 
 </html>
