--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,31 +19,69 @@ iroot {
     margin: 0;
     box-sizing: border-box;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    border: none;
+}
+
+.nav {
+    margin: 0;
+    padding: 0;
+    margin-top: 3%;
+}
+
+.tabsmenus {
+    text-align: center;
+    padding: 2%;
+    width: 100%;
+}
+
+.tablink {
+    background-color: #555;
+    color: white;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 14px;
+    font-size: 17px;
+    width: 25%;
+}
+
+.tablink:hover {
+    background-color: #e0e0d1;
+}
+
+.tablink.active {
+    background-color: #ccc;
+}
+
+.conten {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
 }
 
 
-/*formlogin*/
+/* Style the tab content (and add height:100% for full page content) */
 
-.tabsconten {
+.tabcontent {
+    color: white;
     display: none;
-    position: fixed;
-    bottom: 0;
-    right: 30px;
-    border: 3px solid #f1f1f1;
-    z-index: 9;
-    bottom: 230px;
+    padding: 100px 20px;
+    height: 100%;
 }
 
 
 /* product-blog */
 
-.pro-blog {
+.problog {
     border-color: #00B7FF;
     padding: 20px;
     width: 100%;
     /* margin-left: 10px;
     margin-right: 10px; */
     text-align: center;
+    float: left;
 }
 
 .blog-yo {
