--- a/public/stylesheets/tabs.css
+++ b/public/stylesheets/tabs.css
@@ -21,6 +21,10 @@ iroot {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+bady {
+    background-image: url(./../images/backgroun.jpg);
+}
+
 ul {
     list-style: none;
 }
@@ -72,51 +76,6 @@ header button {
 
 header button:hover {
     background-color: gold;
-}
-
-
-/* sercth input */
-
-input[type=search] {
-    width: 80%;
-    border: 2px solid #aaa;
-    border-radius: 4px;
-    margin: 8px 0;
-    outline: none;
-    padding: 15px;
-    box-sizing: border-box;
-    transition: .3s;
-    font-size: 20px;
-}
-
-input[type=search]:focus {
-    border-color: dodgerblue;
-    box-shadow: 0 0 8px 0 dodgerblue;
-}
-
-.inputwithIcon input[type=search] {
-    padding-left: 40px;
-}
-
-.inputwithIcon {
-    /*
-  position: relative;
-  margin-left: 17%;
-  margin-top: 5%;
-  */
-    display: -ms-flexbox;
-    /* IE10 */
-    display: flex;
-    width: 100%;
-    margin-bottom: 15px;
-    margin-left: 8%;
-    margin-top: 4%;
-}
-
-.inputwithIcon i {
-    left: 0;
-    top: 8;
-    text-align: center;
 }
 
 
