--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
@@ -15,26 +16,51 @@
 
 <body>
     <% include tabs.ejs  %>
-
-        <div class="pro-blog">
-            <button class="blog-yo" onclick="location.href='/shirt'">
-            <img src="/images/5a52470a90dc293fd47be5bc8c8f58d1.jpeg" >
-            
-        </button>
-            <button class="blog-yo">
-                
-            <img src="/images/shoes.jpg" >
-            
-        </button>
-            <button class="blog-yo">
-            <img src="/images/blow.jpg" >
-           
-        </button>
-            <button class="blog-yo">
-            <img src="/images/pants.jpg">
-                      
-        </button>
+        <div class="tabsmenus">
+            <button class="tablink" onclick="openPage('event','Home')">Home</button>
+            <button class="tablink" onclick="openPage('event','News')" id="defaultOpen">News</button>
+            <button class="tablink" onclick="openPage('event','Contact')">Contact</button>
+            <button class="tablink" onclick="openPage('event','About')">About</button>
         </div>
+        <div id="Home" class="conten" style="display:none">
+            <h2>home</h2>
+            <h2>home</h2>
+            <h2>home</h2>
+            <h2>home</h2>
+            <h2>home</h2>
+            <h2>home</h2>
+            <h2>home</h2>
+            <h2>home</h2>
+        </div>
+        <div id="News" class="conten" style="display:none">
+            <h2>News</h2>
+            <button class="blog-yo">
+                <img src="/images/backgroun.jpg">
+            </button>
+
+        </div>
+        <div id="Contact" class="conten" style="display:none">
+            <h2>Contact</h2>
+        </div>
+        <div id="About" class="conten" style="display:none">
+            <h2>About</h2>
+        </div>
+
+        <script>
+            function openPage(evt, productName) {
+                var i, conten, tablink;
+                conten = document.getElementsByClassName("conten");
+                for (i = 0; i < conten.length; i++) {
+                    conten[i].style.display = "none";
+                }
+                tablink = document.getElementsByClassName("tablink");
+                for (i = 0; i < tablink.length; i++) {
+                    tablink[i].className = tablink[i].className.replace(" active", "");
+                }
+                document.getElementById(productName).style.display = "block";
+                evt.currentTarget.className += " active";
+            }
+        </script>
 </body>
 
 </html>
